# timetable-optimise-api

./: .dockerignore  .gcloudignore  .gitignore  DEPLOY.md  DEPLOY_COMPARISON.md  DEPLOY_GITHUB.md  Dockerfile  README.md  cloudbuild-github.yaml  deploy-github.sh  main.py  pyproject.toml
.cursor/rules/: rule.mdc
.devcontainer/: Dockerfile  devcontainer.json
.github/: copilot-instructions.md
.github/instructions/: fastapi.instructions.md
.github/workflows/: deploy-cloud-run.yml
src/application/factories/: annual_data_factory.py  annual_timetable_result_factory.py  constraint_definitions_factory.py
src/application/models/: dto.py
src/application/usecases/: get_annual_data_usecase.py  optimise_annual_timetable_usecase.py
src/common/: constants.py
src/domain/constraints/: _base.py  _mapping.py  afternoon.py  block.py  consecutive_day.py  consecutive_period.py  consecutive_period_instructor.py  course.py  courses_per_day.py  courses_per_day_instructor.py  credit.py  homeroom.py  instructor.py  specific_day_period.py  teacher_consecutive_lessons.py  teacher_daily_lessons.py  w_of_x_definition.py  y_of_x_definition.py
src/domain/interfaces/: solver_interface.py
src/domain/logics/: constraint_logic.py
src/domain/models/: annual_lp_model.py
src/domain/services/: annual_lp_service.py
src/domain/vo/: annual_data.py  constraint_definition.py
src/infrastructure/solvers/: cbc_solver.py  gurobi_solver.py
src/interface/assemblers/: optimise_annual_timetable_assembler.py
src/interface/routers/: rest.py
tests/utils/: timetable_viewer.py
(+18 files in other folders)
